--- a/style.css
+++ b/style.css
@@ -268,3 +268,25 @@ padding: 10px;
     width: 25px;
     height: 25px;
 }
+#show-archive-button{
+  
+    width: 70px;
+    height: 50px;
+    position: absolute;
+    right: 15px;
+    top: 10px;
+}
+#show-archive-button img{
+    
+   width: 100%;
+   height: 100%;
+}
+#show-archive-button img:first-child{
+    display: none;
+}
+#show-archive-button img:last-child{
+    display: block;
+}
+#show-archive{
+    position: relative;
+}
